# reacher

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py  uv_pyproject.toml
IsaacLabExtensionTemplate/: README.md  pyproject.toml
IsaacLabExtensionTemplate/exts/foobar/: setup.py
IsaacLabExtensionTemplate/exts/foobar/config/: extension.toml
IsaacLabExtensionTemplate/exts/foobar/foobar/: ui_extension_example.py
IsaacLabExtensionTemplate/scripts/: list_envs.py  rename_template.py  train_rl.py
IsaacLabExtensionTemplate/scripts/rl/: cli_args.py  play.py  train.py
IsaacLabExtensionTemplate/scripts/rsl_rl/: play.py  train.py
IsaacLabExtensionTemplate/scripts/scripts/: train_rl.py
isaac_ext/: pyproject.toml  setup.py
isaac_ext/config/: extension.toml
isaac_ext/isaac_ext/assets/anymal_d_z1/: anymal_d_z1.py
isaac_ext/isaac_ext/assets/z1/: z1.py
isaac_ext/isaac_ext/tasks/: __init__.py
isaac_ext/isaac_ext/tasks/diffusion/: rl_env.py
isaac_ext/isaac_ext/tasks/diffusion/config/anymal/: __init__.py  locodiff_cfg.yaml  locodiff_env_cfg.py
isaac_ext/isaac_ext/tasks/diffusion/config/cartpole/: __init__.py  cartpole_cfg.yaml
isaac_ext/isaac_ext/tasks/diffusion/config/cartpole/model/: unet.yaml
isaac_ext/isaac_ext/tasks/diffusion/config/franka/: __init__.py  base.yaml  cfg.yaml  classifier_cfg.yaml  env_cfg.py
isaac_ext/isaac_ext/tasks/diffusion/config/franka/classifier/: transformer.yaml  unet.yaml
isaac_ext/isaac_ext/tasks/diffusion/config/franka/model/: transformer.yaml  unet.yaml
isaac_ext/isaac_ext/tasks/diffusion/config/locodiff/: locodiff_env_cfg.py
isaac_ext/isaac_ext/tasks/diffusion/config/maze/: classifier_cfg.yaml  maze_cfg.yaml
isaac_ext/isaac_ext/tasks/diffusion/config/maze/model/: transformer.yaml  unet.yaml
isaac_ext/isaac_ext/tasks/diffusion/config/no_cmd/: __init__.py  no_cmd_cfg.yaml  no_cmd_env_cfg.py
isaac_ext/isaac_ext/tasks/diffusion/config/no_cmd/model/: unet.yaml
isaac_ext/isaac_ext/tasks/reacher/: base_env.py
isaac_ext/isaac_ext/tasks/reacher_rl/: rl_env.py
isaac_ext/isaac_ext/tasks/reacher_rl/config/: __init__.py  rl_cfg.yaml  rl_env_cfg.py
isaac_ext/isaac_ext/tasks/reacher_rl/config/locodiff/: locodiff_cfg.yaml  locodiff_env_cfg.py
isaac_ext/isaac_ext/tasks/reacher_rl/config/locodiff/model/: mlp.yaml  transformer.yaml
isaac_ext/isaac_ext/tasks/reacher_rl/config/no_cmd/: no_cmd_cfg.yaml
isaac_ext/isaac_ext/tasks/reacher_rl/mdp/: __init__.py  rewards.py
isaac_ext/isaac_ext/tasks/rsl_rl/: rsl_rl_env_cfg.py
isaac_ext/isaac_ext/tasks/rsl_rl/config/anymal_z1/: __init__.py  anymal_z1_cfg.yaml  anymal_z1_env_cfg.py
isaac_ext/isaac_ext/tasks/rsl_rl/config/cartpole/: __init__.py  cartpole_cfg.yaml  cartpole_env_cfg.py
isaac_ext/isaac_ext/tasks/rsl_rl/config/franka/: __init__.py  cfg.yaml  env_cfg.py  env_cfg_2.py
isaac_ext/isaac_ext/tasks/rsl_rl/mdp/: __init__.py  actions.py  commands.py  events.py  observations.py  rewards.py
isaac_ext/isaac_ext/tasks/utils/: data_collector.py
isaac_ext/isaac_ext/tasks/vae/: vae_env_cfg.py
isaac_ext/isaac_ext/tasks/vae/config/anymal_z1/: anymal_z1_env.py
isaac_ext/isaac_ext/tasks/vae/config/franka/: franka_env.py
isaac_ext/isaac_ext/tasks/vae/config/z1/: z1_env.py
isaac_ext/isaac_ext/tasks/vae/mdp/: __init__.py  events.py  observations.py
locodiff/: agent.py  classifier.py  classifier_workspace.py  dataloader.py  dataset.py  envs.py  helpers.py  jit_agent.py  plotting.py  policy.py  pyproject.toml  runner.py  samplers.py  temporal.py  transformer.py  unet.py  utils.py  workspace.py  wrappers.py
locodiff/datasets/: d4rl.py  preprocessing.py
locodiff/locodiff/: classifier_runner.py  dataset.py  envs.py  plotting.py  policy.py  runner.py  utils.py
locodiff/locodiff/models/: mlp.py  transformer.py  unet.py
locodiff/models/: transformer.py  unet.py
reacher/: setup.py
reacher/config/: extension.toml  rl_cfg.py
reacher/envs/: __init__.py  anymal_z1_env.py  rl_env.py
reacher/reacher/assets/: __init__.py
reacher/reacher/tasks/reacher/config/: cfg.yaml
reacher/reacher/tasks/reacher_rl/: rl_env.py
reacher/reacher/tasks/reacher_rl/config/: rl_env_cfg.py
reacher/reacher/tasks/utils/: data_collector.py  dataset.py  normalizer.py  utils.py  vae.py
reacher/robots/z1/: .asset_hash
reacher/scripts/: play.py  play_rl.py
reacher/tasks/: __init__.py
reacher/tasks/reacher_rl/: rl_env.py
reacher/tasks/reacher_rl/config/: __init__.py  rl_env_cfg.py
reacher/tasks/reacher_rl/mdp/: __init__.py  observations.py  rewards.py
reacher/utils/: utils.py
scripts/: list_envs.py  rename_template.py
scripts/classifier/: cli_args.py  play.py  train.py
scripts/diffusion/: play.py  train.py
scripts/locodiff/: play.py  train.py
scripts/maze/: play.py  train.py  train_classifier.py
scripts/rl/: collect.py  play.py  train.py
scripts/rsl_rl/: collect.py  play.py  train.py
scripts/vae/: collect_data.py  play.py  train.py  view_latent.py
source/latent_planning/: cfg.yaml  collect_data.py  dataset.py  env_cfg.py  latent_planning_data_collector.py  normalizer.py  play.py  runner.py  train.py  utils.py  vae.py
source/latent_planning/envs/: __init__.py  anymal_z1_env.py  base_env.py  franka_env.py  z1_env.py
source/latent_planning/robots/: __init__.py
source/latent_planning/robots/anymal_d_z1/: .asset_hash  anymal_d_z1.py  config.yaml
source/latent_planning/robots/z1/: .asset_hash  config.yaml  z1.py
source/latent_planning/test/: view_dataset.py
source/reacher/: cfg.yaml  collect_data.py  train.py  utils.py  vae.py
source/reacher/config/: cfg.yaml  rl_cfg.py  rl_cfg.yaml
source/reacher/envs/: anymal_z1_env.py  base_env.py  franka_env.py  rl_env.py  z1_env.py
source/reacher/robots/anymal_d_z1/: anymal_d_z1.py
source/reacher/robots/z1/: z1.py
source/reacher/scripts/: play_rl.py  train_rl.py
source/reacher/scripts/test/: view_dataset.py
source/reacher/test/: view_dataset.py
tests/: test_2d_env.py  test_resampling.py  test_sliding_window.py
vae/: data_collector.py  dataset.py  runner.py  utils.py
(+20 files in other folders)
