[project]
name = "isaac_ext"
version = "0.1.0"
description = "Extension Template for Isaac Lab"
authors = [{ name = "Isaac Lab Project Developers" }]
maintainers = [{ name = "Isaac Lab Project Developers" }]
keywords = ["extension", "template", "isaaclab"]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "psutil",
  "isaaclab",
  "isaaclab_assets",
  "isaaclab_mimic",
  "isaaclab_rl",
  "isaaclab_tasks",
]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Isaac Sim :: 2023.1.1",
  "Isaac Sim :: 4.0.0",
]

[project.urls]
repository = "https://github.com/isaac-sim/IsaacLabExtensionTemplate.git"

[tool.setuptools]
packages = ["isaac_ext"]
include-package-data = true
zip-safe = false

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"
